Cleaning up routes and index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         window.location = ("home.html");
                     },
                     error: function (msg) {
-                        var newAttachments = eval("(" + msg + ")");
+                        var newAttachments = alert(JSON.stringify(msg));
                     }
                 });
                 $("#submitButton").removeAttr("disabled");
@@ -80,7 +80,7 @@
 					<input type="password" name="password" id="password" value="" placeholder="Password" />
 				</div>
 
-				<div class="div_dim">
+<!-- 				<div class="div_dim">
 					<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
 						<span class="ui-btn-inner ui-btn-corner-all">
 							<span class="ext_button">
@@ -88,20 +88,20 @@
 							</span>
 						</span>
 					</a>
-				</div>
+				</div> -->
 
 				<input type="submit" value="Login" id="submitButton">
-				<button onclick="myFunction()">Try it</button>
-				<button onclick="deviceReady()">What</button>
+		<!-- 		<button onclick="myFunction()">Try it</button>
+				<button onclick="deviceReady()">What</button> -->
 			</form> 
 			
-			<a style="font-weight: 200;" href="signup.html" data-inline="false">
+<!-- 			<a style="font-weight: 200;" href="signup.html" data-inline="false">
 				<span class="ui-btn-inner ui-btn-corner-all">
 					<span class="ui-btn-text">
 						Sign Up
 					</span>
 				</span>
-			</a>
+			</a> -->
 			
 			<a style="font-weight: 200;" href="forgotpassword.html" data-inline="false">
 				<span class="ui-btn-inner ui-btn-corner-all">
@@ -113,25 +113,12 @@
 			
 		</div> 
 
-		
-		<select class="drop_button" name="transportedwith" id="transportedwith">
-			<option>Transported With</option>
-			<option value="1">Quantum Tunneling</option>
-			<option value="2">The 10 Dimensions</option>
-			<option value="3">Syn</option>
-			<option value="4">X-Men</option>
-			<option value="5">Buddah</option>
-			<option value="6">A Magic Carpet Ride</option>
-			<option value="7">A Smile</option>
-		</select>
-
-
-		<h4>GitHub Test Search Filter</h4>
+<!-- 		<h4>GitHub Test Search Filter</h4>
 
 		<div data-role="content">
 			<ul id="allRepos" data-role="listview" data-filter="true">
 			</ul>
-		</div>
+		</div> -->
 
 
 	</div>
