--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<input type="password" name="password" id="password" value="" placeholder="Password" />
 				</div>
 
-<!-- 				<div class="div_dim">
+<!--  				<div class="div_dim">
 					<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
 						<span class="ui-btn-inner ui-btn-corner-all">
 							<span class="ext_button">
@@ -88,8 +88,8 @@
 							</span>
 						</span>
 					</a>
-				</div> -->
-
+				</div>
+ -->
 				<input type="submit" value="Login" id="submitButton">
 		<!-- 		<button onclick="myFunction()">Try it</button>
 				<button onclick="deviceReady()">What</button> -->
