--- a/pickupreport.html
+++ b/pickupreport.html
@@ -21,7 +21,7 @@
 	<!-- DatePicker -->
 	<link rel="stylesheet" type="text/css" href="themes/jquery.mobile.min.css" />
 	
-	<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
+	<link rel="stylesheet" type="text/css" href="themes/jqm-datebox.min.css" />
 
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
@@ -230,7 +230,7 @@
 
 		<div class="field_title" data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-				<label style="color: #DB5432; font: 15px/1 'Trebuchet MS', Arial; line-height: 150%; height: 25px;" for="checkbox-1">
+				<label style="color: #FF3300; font: 15px/1 'Trebuchet MS', Arial; line-height: 150%; height: 25px;" for="checkbox-1">
 					<text style="top: 15px;">Flag for Admin</text>
 				</label>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
