Adding POST, PUT, and DELETE (put and delete not working)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1 style="color: #4a4a4a; font:30px/1.5 'Trebuchet MS', Arial;">Log In</h1>  
-			<form id="loginForm" method="POST">  
+			<form id="loginForm">  
 				<!-- <div data-role="fieldcontain">  
 					<label style="color: #4a4a4a; font:15px/1.5 'Trebuchet MS', Arial;" for="url">Username:</label>  
 					<input class="required" id="Lusername" name="uid_r" value="" type="text">            
