--- a/routes.html
+++ b/routes.html
@@ -24,36 +24,54 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 	<script>
 		$(function () {
-            //$('.employee').unbind().on("click", function () {
-        	$.ajax({
-        		type: "GET",
-        		url: "http://dev.boulderfoodrescue.org/logs/mine_past.json",
-        		data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
-        		success: function (data) {
-        			alert(JSON.stringify(data));
-        			// var test =  data[0].id;
-        			// document.getElementById("demo").innerHTML = test;
+			$.ajax({
+				type: "GET",
+				url: "http://dev.boulderfoodrescue.org/logs/mine_upcoming.json",
+				data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
+				success: function (data) {
+            			//alert(JSON.stringify(data));
+            			//alert(JSON.stringify(data[0].donor_id));
+            			alert("Number of upcoming shifts " + data.length);
+            			if(data[(data.length)-1].donor_id)
+            			{
+            				result=data[(data.length)-1].donor_id;
+            			}
 
-        			// var when =  data[0].when;
-        			// document.getElementById("date").innerHTML = when;
-        			if(data[0])
-        			{
-        				populateShiftData(data[0]);
-        			}
+            			alert("donor id " + result);
 
-        		},
-        		error: function (msg) {
-        			alert( msg );
-        		}
-        	});
-        });
+            			$.ajax({
+            				type: "GET",
+            				url: "http://dev.boulderfoodrescue.org/locations/" + result + ".json",
+            				data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
+            				success: function (data) {
+            					alert("success");
+            					if(data)
+            					{
+            						populateShiftData(data);
+            					}
 
-		function populateShiftData(data){
-			$('#date').html(data.when);
-			$('#demo').html(data.id);
-		}
+            				},
+            				error: function (msg) {
+            					alert( JSON.stringify(msg) );
+            				}
+            			});
 
-	</script>
+            		},
+            		error: function (msg) {
+            			alert( JSON.stringify(msg) );
+            		}
+            	});
+});
+function populateShiftData(data){
+	$('#contact').html(data.name);
+	$('#address').html(data.address);
+	$('#date').html(data.hours);
+	$('#info').html(data.equipment_storage_info);
+	$('#info2').html(data.food_storage_info);
+	$('#info3').html(data.entry_info);
+	$('#info4').html(data.exit_info);
+}
+</script>
 </head>
 <style type="text/css">
 	.field_title {
@@ -112,23 +130,35 @@
 		<div class="field_title" data-role="fieldcontain">
 			<label style="color: #DB5432; font: 20px/1 'Trebuchet MS', Arial;" for="name">Shift 1</label>
 		</div>
-		<table class="field_title" style="color: #4a4a4a; 
+		<table border="1" class="field_title" style="color: #4a4a4a; 
 		font:15px/1.5 'Trebuchet MS', Arial;">
 		<tr>
-			<td>Donor</td>
-			<td>XXX</td>		
+			<td style="font-weight:bold">Donor</td>
+			<td id="contact"></td>		
 		</tr>
 		<tr>
-			<td>Recipient</td>
-			<td>XXX</td>		
+			<td style="font-weight:bold">Address</td>
+			<td id="address"></td>		
 		</tr>
 		<tr>
-			<td>Volunteers</td>
-			<td id="demo"></td>		
-		</tr>
-		<tr>
-			<td>Time Frame</td>
+			<td style="font-weight:bold">Time Frame</td>
 			<td id="date"></td>		
+		</tr>
+		<tr>
+			<td style="font-weight:bold">Equipment Storage Info</td>
+			<td id="info"></td>
+		</tr>
+		<tr>
+			<td style="font-weight:bold">Food Storage Info</td>
+			<td id="info2"></td>
+		</tr>
+		<tr>
+			<td style="font-weight:bold">Entry Info</td>
+			<td id="info3"></td>
+		</tr>
+		<tr>
+			<td style="font-weight:bold">Exit Info</td>
+			<td id="info4"></td>
 		</tr>
 	</table>
 
