--- a/home.html
+++ b/home.html
@@ -8,12 +8,11 @@
 	<link rel="stylesheet" href="themes/application.css">
 	
 	<script href="themes/js/boostrap-dropdown.js"></script>
-	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
 	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.js"></script>
 
 	<!-- DatePicker -->
 	<link rel="stylesheet" type="text/css" href="themes/jquery.mobile.min.css" />
@@ -22,46 +21,25 @@
 
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>	
 	<script>
-    //     $(function () {
-    //         //$('.employee').unbind().on("click", function () {
-    //         $("a").on("click", function (y) {
-    //             //disable the button so we can't resubmit while we wait
-    //             $.ajax({
-    //                 type: "GET",
-    //                 url: "http://dev.boulderfoodrescue.org/logs/mine_upcoming.json",
-    //                 data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
-    //                 success: function (data) {
-    //                 	alert(JSON.stringify(data));
-    //                     var minePastData =  data;
-
-    //                 },
-    //                 error: function (msg) {
-    //                     alert( msg );
-    //                 }
-    //             });
-    //         });
-    //     });
-
-</script>
-<script>
-	$(function () {
-		$("#logout").on("click",function() {
-			$.ajax({
-				type: "DELETE",
-				url: "http://dev.boulderfoodrescue.org/volunteers/sign_out.json",
-				success: function (data) {
-					alert("Logging Out");
-					window.location = ("index.html");
-				},
-				error: function(msg) {
-					alert(JSON.stringify(msg));
-				}
+		$(function () {
+			$("#logout").on("click", function() {
+				$.ajax({
+					type: "DELETE",
+					url: "http://dev.boulderfoodrescue.org/volunteers/sign_out.json",
+					data: {volunteer_email: window.sessionStorage.email, volunteer_token: window.sessionStorage.token},
+					success: function (data) {
+						alert("Logging Out");
+						window.location = ("index.html");
+					},
+					error: function(msg) {
+						alert(JSON.stringify(msg));
+					}
+				});
 			});
 		});
-	});
-</script>
+	</script>
 </head>
 <body>
 	<div data-role="page" id="home">  
