--- a/pickupreport.html
+++ b/pickupreport.html
@@ -270,25 +270,18 @@
 		<div class="div_dim">
 			<select class="drop_button" name="weighedwith" id="weighedwith">
 				<option>Weighed With</option>
-				<option value="1">Scalar laplacian</option>
-				<option value="2">Han Solo</option>
-				<option value="3">The Easter Bunny</option>
-				<option value="4">The Power of Friendship</option>
-				<option value="5">True happiness</option>
-				<option value="6">Virgin Sacrifice</option>
-				<option value="7">Tears of a Lost Soul</option>
+				<option value="Bathroom Scale">Bathroom Scale (lb)</option>
+				<option value="Floor Scale">Floor Scale (lb)</option>
+				<option value="Guesstimate">Guesstimate (lb)</option>
 			</select>
 		</div>
 
 		<div class="div_dim">
 			<select class="drop_button" name="transportedwith" id="transportedwith">
 				<option>Transported With</option>
-				<option value="1">Quantum Tunneling</option>
-				<option value="2">The 10 Dimensions</option>
-				<option value="3">Syn</option>
-				<option value="4">X-Men</option>
-				<option value="5">Buddah</option>
-				<option value="6">A Magic Carpet Ride</option>
+				<option value="Bike">Bike</option>
+				<option value="Car">Car</option>
+				<option value="Foot">Foot</option>
 				<option value="7">A Smile</option>
 			</select>
 		</div>
